--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/login_background">
     
             <include
@@ -14,7 +15,7 @@
     <ScrollView
 	    android:id="@+id/scrollView1"
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
+	    android:layout_height="match_parent">
 
 	    <RelativeLayout
 	        android:layout_width="match_parent"
@@ -148,4 +149,4 @@
 			    </RelativeLayout>
 	</ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
