--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -15,19 +15,21 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent">
 
-	    <RelativeLayout
+	    <LinearLayout
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
+	        android:layout_alignParentBottom="true" 
 	        android:orientation="vertical" >
 	        
 	        <ImageView
 		        android:id="@+id/logo"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
-		        android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingTop="50dp"
-                android:paddingBottom="10dp"
+		        android:layout_marginTop="10dip"
+		        android:paddingLeft="5dip"
+                android:paddingRight="5dip"
+                android:paddingTop="10dip"
+                android:paddingBottom="10dip"
 		        android:src="@drawable/logo3" />
 	        
 	        <TextView
@@ -35,7 +37,8 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_below="@+id/logo"
-				android:paddingTop="0dp"
+				android:layout_marginTop="5dip"
+				android:paddingTop="0dip"
 				android:gravity="center_horizontal"
 				android:text="TRAVEL SMART"
 			    android:textColor="@color/white"
@@ -44,12 +47,12 @@
 	        
 		    
 				<LinearLayout
-				    android:id="@+id/signinEmailLayout"
+				    android:id="@+id/inputLayout"
 				    android:layout_width="match_parent"
 				    android:layout_height="wrap_content"
-				    android:layout_below="@+id/travel_smart"
-				    android:layout_marginTop="50dp"
-				    android:paddingTop="10dp"
+				    android:layout_marginTop="20dip"
+				    android:paddingTop="10dip"
+				    android:orientation="vertical"
 				    android:gravity="center_horizontal" >
 				    
 			
@@ -58,6 +61,7 @@
 				        android:layout_width="wrap_content"
 				        android:layout_height="wrap_content"
 				        android:layout_gravity="center_horizontal"
+				        android:layout_marginTop="5dip"
 				        android:ems="10"
 				        android:gravity="left"
 				        android:hint="EMAIL"
@@ -68,22 +72,13 @@
 
 				    </EditText>
 		
-		   		</LinearLayout>
-		   		
-				<LinearLayout
-				    android:id="@+id/signinPasswordLayout"
-				    android:layout_marginTop="20dp"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-				    android:layout_below="@+id/signinEmailLayout"
-				    android:gravity="center_horizontal" >
-				    
-			
 				    <EditText
 				        android:id="@+id/signinPasswordEditText"
 				        android:layout_width="wrap_content"
 				        android:layout_height="wrap_content"
 				        android:layout_gravity="center_horizontal"
+				        android:layout_marginTop="15dip"
+				        android:layout_marginBottom="15dip"
 				        android:ems="10"
 				        android:gravity="left"
 				        android:hint="PASSWORD"
@@ -92,26 +87,25 @@
 				        android:inputType="textPassword" >
 
 				    </EditText>
-
 		   		</LinearLayout>
-		   		
-				
-		   		
- 					<Button 
+
+				<Button 
 				    android:id="@+id/butSignIn"
-				    android:layout_marginTop="20dp"
-				    android:background="@android:color/holo_blue_dark"
+				    android:layout_marginTop="0dip"
+				    android:background="@color/gray"
+				    android:layout_gravity="center_horizontal"
 				    android:text="LOG IN"
-				    android:layout_below="@+id/signinPasswordLayout"
-				    android:layout_centerHorizontal="true"
-				    android:layout_width="200dp"
-				    android:layout_height="50dp"/>
+				    android:gravity="center_vertical"
+				    android:paddingLeft="50dip"
+                    android:paddingRight="50dip"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"/>
  					
  				 <TextView
 				android:id="@+id/sign_up"
+				android:layout_marginTop="10dip"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_below="@+id/butSignIn"
 				android:paddingTop="0dp"
 				android:gravity="center_horizontal"
 				android:text="Sign Up"
@@ -121,11 +115,12 @@
 	        
  			<FrameLayout
  			    	android:id="@+id/LoginHelp"
+ 			    	android:layout_marginBottom="10dip"
  			    	android:orientation="horizontal"
- 			    	android:layout_below="@id/sign_up"
 				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-				    android:layout_alignParentBottom="true" >
+				    android:layout_height="match_parent"
+				    android:layout_alignParentBottom="true" 
+				    >
 			    					
 				<TextView
 				    android:id="@+id/termsofuse"
@@ -144,7 +139,7 @@
 				    android:textSize="16sp" />
 				</FrameLayout>
 
-			    </RelativeLayout>
+			    </LinearLayout>
 	</ScrollView>
 
 </LinearLayout>
