--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -48,6 +48,11 @@
     
     <color name="circle">#8f8f8f</color>
     <color name="circle_active">#ffa500</color>
+        <color name="tab_text">#ffe2e2e2</color>
+        <color name="tab_text_select">#ffffa800</color>
+    
+            <drawable name="divder">#34333a</drawable>
+        
     
      
 </resources>
