--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,5 +6,21 @@
     -->
 
     <!-- Application theme. -->
+    
+        <style name = "ListViewStyle">        
+        <item name="android:divider">@drawable/divder</item>
+        <item name="android:dividerHeight">@dimen/divier_height</item>
+        <item name="android:cacheColorHint">@null</item>
+    </style>
+    
+            <style name = "ButtonStyle">        
+        <item name="android:textSize">@dimen/text_size_normal</item>
+        <item name="android:layout_width">150dip</item>
+        <item name="android:layout_height">40dip</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/pink</item>
+    </style>
+    
+        
 
 </resources>
