--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -7,13 +7,13 @@
 
     <!-- Application theme. -->
     
-        <style name = "ListViewStyle">        
+    <style name = "ListViewStyle">        
         <item name="android:divider">@drawable/divder</item>
         <item name="android:dividerHeight">@dimen/divier_height</item>
         <item name="android:cacheColorHint">@null</item>
     </style>
     
-            <style name = "ButtonStyle">        
+    <style name = "ButtonStyle">        
         <item name="android:textSize">@dimen/text_size_normal</item>
         <item name="android:layout_width">150dip</item>
         <item name="android:layout_height">40dip</item>
@@ -21,6 +21,9 @@
         <item name="android:background">@color/pink</item>
     </style>
     
-        
+    <style name="common_page_background">
+        <item name="android:background">#f3f3f3</item>
+    </style>
+            
 
 </resources>
