--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -13,7 +13,8 @@
     <RelativeLayout
 	    android:id="@+id/scrollView1"
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
+	    android:layout_height="match_parent"
+	    android:layout_marginBottom="0dip">
 
 	    <LinearLayout
 	        android:layout_width="match_parent"
