--- a/res/layout/trip_list.xml
+++ b/res/layout/trip_list.xml
@@ -10,7 +10,23 @@
         android:layout_width="fill_parent"
         android:layout_height="@dimen/custom_title_height"
         layout="@layout/custom_title" />
-
+ 
+    <EditText
+        android:id="@+id/title_name_et"
+        android:layout_width="fill_parent"
+        android:layout_height="50dip"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@color/gray"
+        android:cursorVisible="true"
+        android:drawableLeft="@drawable/search_title"
+        android:drawablePadding="10dip"
+        android:hint="Tap to Search"
+        android:paddingLeft="10dip"
+        android:textColor="#4b4b4b"
+        android:textCursorDrawable="@null"
+ 	 />
+    
     <ListView
         android:id="@+id/trip_list"
         android:layout_width="fill_parent"
