--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -120,6 +120,7 @@
  			    	android:orientation="horizontal"
 				    android:layout_width="match_parent"
 				    android:layout_height="match_parent"
+				    android:layout_gravity="bottom"
 				    android:layout_alignParentBottom="true" 
 				    >
 			    					
