--- a/res/layout/signup_layout.xml
+++ b/res/layout/signup_layout.xml
@@ -1,241 +1,255 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/login_background">
+    android:background="@drawable/bg_login">
     
     <include
     android:layout_width="fill_parent"
     android:layout_height="@dimen/custom_title_height"
-    layout="@layout/custom_title" />
-        
-    <RelativeLayout
-	    android:id="@+id/scrollView1"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:layout_marginBottom="0dip">
+    layout="@layout/custom_title"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/include" />
 
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_alignParentBottom="true" 
-	        android:orientation="vertical" >
-		    
-				<LinearLayout
-				    android:id="@+id/inputLayout"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-				    android:layout_marginTop="20dip"
-				    android:paddingTop="10dip"
-				    android:orientation="vertical"
-				    android:gravity="center_horizontal" >
-				    
-				    <EditText
-				        android:id="@+id/firstNameEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="5dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="FIRST NAME"
-				        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textEmailAddress" >
 
-				    </EditText>
-				    
-					<TextView 
-		                android:layout_width="match_parent"
-		                android:layout_height="2px"
-		                android:layout_gravity="center_vertical"
-		                android:layout_weight="1"
-		                android:background="@color/gray"
-		                />
-				    
-		
-				    <EditText
-				        android:id="@+id/lastNameEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="LAST NAME"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
+    <LinearLayout
+                android:id="@+id/inputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dip"
+                android:paddingTop="10dip"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_below="@+id/include"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
-				    </EditText>
-					<TextView 
-		                android:layout_width="match_parent"
-		                android:layout_height="2px"
-		                android:layout_gravity="center_vertical"
-		                android:layout_weight="1"
-		                android:background="@color/gray"
-		                />
-				    
-		
-				    <EditText
-				        android:id="@+id/emailEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="EMAIL"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
 
-				    </EditText>
-				    
-			
-				    <TextView 
-		                android:layout_width="match_parent"
-		                android:layout_height="2px"
-		                android:layout_gravity="center_vertical"
-		                android:layout_weight="1"
-		                android:background="@color/gray"
-		                />
-				    
-		
-				    <EditText
-				        android:id="@+id/countryEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="COUNTRY"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
+        <EditText
+            android:id="@+id/firstNameEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="FIRST NAME"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:background="#00000000"
+            android:inputType="text" >
 
-				    </EditText>
-				    
-				    <TextView 
-		                android:layout_width="match_parent"
-		                android:layout_height="2px"
-		                android:layout_gravity="center_vertical"
-		                android:layout_weight="1"
-		                android:background="@color/gray"
-		                />
-				    
-		
-				    <EditText
-				        android:id="@+id/userNameEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="USERNAME"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
+        </EditText>
 
-				    </EditText>
-				    
-				    <TextView 
-		                android:layout_width="match_parent"
-		                android:layout_height="2px"
-		                android:layout_gravity="center_vertical"
-		                android:layout_weight="1"
-		                android:background="@color/gray"
-		                />
-				    
-		
-				    <EditText
-				        android:id="@+id/passwordEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="PASSWORD"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
 
-				    </EditText>
-				    <TextView 
-		                android:layout_width="match_parent"
-		                android:layout_height="2px"
-		                android:layout_gravity="center_vertical"
-		                android:layout_weight="1"
-		                android:background="@color/gray"
-		                />
-				    
-		
-				    <EditText
-				        android:id="@+id/policyNumberEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="POLICY NUMBER"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
+        <EditText
+            android:id="@+id/lastNameEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="LAST NAME"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:background="#00000000"
+            android:inputType="text" >
 
-				    </EditText>
-				    				    
-				    	    
-			</LinearLayout>
+        </EditText>
 
-				<Button 
-				    android:id="@+id/butSignUP"
-				    android:layout_marginTop="0dip"
-				    android:background="@color/gray"
-				    android:layout_gravity="center_horizontal"
-				    android:text="SIGN UP"
-				    android:gravity="center_vertical"
-				    android:paddingLeft="50dip"
-                    android:paddingRight="50dip"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"/>
- 					
- 				 <TextView
-				android:id="@+id/info"
-				android:layout_marginTop="10dip"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:paddingTop="0dp"
-				android:paddingLeft="60dip"
-				android:paddingRight="60dip"
-				android:gravity="center_horizontal"
-				android:text="By registering for or using any portion of the Services, I accept the"
-			    android:textColor="@color/white"
-                android:textSize="15sp"				
-				android:textAppearance="?android:attr/textAppearanceSmall" />
 
-			    					
-				<TextView
-				    android:id="@+id/termsofuse"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_gravity="center_horizontal"
-				    android:text="Terms of Use"
-				    android:textSize="16sp" />
-	        
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
 
-			    </LinearLayout>
-	</RelativeLayout>  
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="EMAIL"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:background="#00000000"
+            android:inputType="textEmailAddress" >
+
+        </EditText>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
+
+        <AutoCompleteTextView
+            android:id="@+id/countryEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:maxLines="1"
+            android:completionThreshold="1"
+            android:cursorVisible="false"
+            android:gravity="left"
+            android:hint="COUNTRY"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:background="#00000000"
+            >
+
+        </AutoCompleteTextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
+
+
+        <EditText
+            android:id="@+id/userNameEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="USERNAME"
+            android:textSize="20sp"
+            android:background="#00000000"
+            android:inputType="text" >
+
+        </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
+
+
+        <EditText
+            android:id="@+id/PasswordEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="PASSWORD"
+            android:textSize="20sp"
+            android:background="#00000000"
+            android:inputType="textPassword" >
+
+        </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
+
+
+        <EditText
+            android:id="@+id/policyNumberEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dip"
+            android:ems="10"
+            android:gravity="left"
+            android:hint="POLICY NUMBER"
+            android:textSize="20sp"
+            android:background="#00000000"
+            android:inputType="number" >
+
+        </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            />
+
+
+
+               </LinearLayout>
+
+    <Button
+        android:id="@+id/butSignUp"
+        android:layout_gravity="center"
+        android:text="SIGN UP"
+        android:gravity="center"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_btn"
+        android:longClickable="false"
+        android:clickable="true"
+        android:adjustViewBounds="true"
+        android:layout_below="@+id/inputLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center" />
+
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_marginTop="10dip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/butSignUp"
+        android:paddingTop="0dp"
+        android:paddingLeft="60dip"
+        android:paddingRight="60dip"
+        android:gravity="center_horizontal"
+        android:text="By registering for or using any portion of the Services, I accept the"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/termsofUse"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="termsofUse"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        android:gravity="center_horizontal"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:clickable="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/info"
+        android:linksClickable="false" />
+
+
+</RelativeLayout>
