--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -1,147 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/login_background">
-    
-    <include
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="@dimen/custom_title_height"
-    layout="@layout/custom_title" />
-        
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg_login"
+    android:id="@+id/login_page">
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dip"
+        android:paddingRight="5dip"
+        android:paddingTop="10dip"
+        android:paddingBottom="10dip"
+        android:src="@drawable/logo3"
+        android:layout_below="@+id/include"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dip"
+        android:layout_marginBottom="10dp" />
+
+    <TextView
+        android:id="@+id/travel_smart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/logo"
+        android:paddingTop="0dip"
+            android:gravity="center_horizontal"
+            android:text="TRAVEL SMART"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
     <RelativeLayout
-	    android:id="@+id/scrollView1"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:layout_marginBottom="0dip">
+                android:id="@+id/inputLayout"
+                android:layout_width="240dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dip"
+        android:orientation="vertical"
+                android:gravity="center_horizontal"
+        android:layout_below="@+id/travel_smart"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp">
 
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_alignParentBottom="true" 
-	        android:orientation="vertical" >
-	        
-	        <ImageView
-		        android:id="@+id/logo"
-		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content"
-		        android:layout_marginTop="10dip"
-		        android:paddingLeft="5dip"
-                android:paddingRight="5dip"
-                android:paddingTop="10dip"
-                android:paddingBottom="10dip"
-		        android:src="@drawable/logo3" />
-	        
-	        <TextView
-				android:id="@+id/travel_smart"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_below="@+id/logo"
-				android:layout_marginTop="5dip"
-				android:paddingTop="0dip"
-				android:gravity="center_horizontal"
-				android:text="TRAVEL SMART"
-			    android:textColor="@color/white"
-                android:textSize="25sp"				
-				android:textAppearance="?android:attr/textAppearanceSmall" />
-	        
-		    
-				<LinearLayout
-				    android:id="@+id/inputLayout"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-				    android:layout_marginTop="20dip"
-				    android:paddingTop="10dip"
-				    android:orientation="vertical"
-				    android:gravity="center_horizontal" >
-				    
-			
-				    <EditText
-				        android:id="@+id/signinEmailEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="5dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="EMAIL"
-				        android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textEmailAddress" >
 
-				    </EditText>
-		
-				    <EditText
-				        android:id="@+id/signinPasswordEditText"
-				        android:layout_width="wrap_content"
-				        android:layout_height="wrap_content"
-				        android:layout_gravity="center_horizontal"
-				        android:layout_marginTop="15dip"
-				        android:layout_marginBottom="15dip"
-				        android:ems="10"
-				        android:gravity="left"
-				        android:hint="PASSWORD"
-				        android:textSize="20sp"
-                        android:background="#00000000"
-				        android:inputType="textPassword" >
+                <EditText
+                    android:id="@+id/signinEmailEditText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:ems="10"
+                    android:gravity="left"
+                    android:hint="EMAIL"
+                    android:textColorHint="@color/white"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:background="#00000000"
+                    android:inputType="textEmailAddress"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:padding="10dp">
 
-				    </EditText>
-		   		</LinearLayout>
+                </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            android:layout_alignParentLeft="false"
+            android:layout_marginLeft="20dp"
+            android:layout_alignParentTop="false"
+            android:layout_below="@+id/signinEmailEditText"
+            android:layout_marginRight="20dp" />
 
-				<Button 
-				    android:id="@+id/butSignIn"
-				    android:layout_marginTop="0dip"
-				    android:background="@color/gray"
-				    android:layout_gravity="center_horizontal"
-				    android:text="LOG IN"
-				    android:gravity="center_vertical"
-				    android:paddingLeft="50dip"
-                    android:paddingRight="50dip"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"/>
- 					
- 				 <TextView
-				android:id="@+id/sign_up"
-				android:layout_marginTop="10dip"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:paddingTop="0dp"
-				android:gravity="center_horizontal"
-				android:text="Sign Up"
-			    android:textColor="@color/white"
-                android:textSize="25sp"				
-				android:textAppearance="?android:attr/textAppearanceSmall" />
-	        
- 			<FrameLayout
- 			    	android:id="@+id/LoginHelp"
- 			    	android:layout_marginTop="50dip"
- 			    	android:orientation="horizontal"
-				    android:layout_width="match_parent"
-				    android:layout_height="match_parent"
-				    android:layout_gravity="bottom"
-				    android:layout_alignParentBottom="true" 
-				    >
-			    					
-				<TextView
-				    android:id="@+id/termsofuse"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_gravity="left"
-				    android:text="Terms of Use"
-				    android:textSize="16sp" />
-	        
-				<TextView
-				    android:id="@+id/learnMore"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_gravity="right"
-				    android:text="Learn More"
-				    android:textSize="16sp" />
-				</FrameLayout>
 
-			    </LinearLayout>
-	</RelativeLayout>
+        <EditText
+                    android:id="@+id/signinPasswordEditText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+            android:ems="10"
+                    android:gravity="left"
+                    android:hint="PASSWORD"
+                    android:textColorHint="@color/white"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:background="#00000000"
+                    android:inputType="textPassword"
+            android:layout_alignParentLeft="false"
+            android:layout_marginLeft="20dp"
+            android:layout_alignParentTop="false"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/signinEmailEditText"
+            android:layout_marginRight="20dp"
+            android:padding="10dp">
 
-</LinearLayout>
+                </EditText>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@color/gray"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_below="@+id/signinPasswordEditText"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp" />
+
+    </RelativeLayout>
+
+    <TextView
+            android:id="@+id/sign_up"
+            android:layout_marginTop="15dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="0dp"
+                 android:text="Sign Up"
+            android:textColor="#ececec"
+            android:textSize="18sp"
+        android:gravity="center_horizontal"
+                 android:textAlignment="center"
+                 android:layout_gravity="center_horizontal"
+                 android:clickable="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/butSignIn"
+        android:linksClickable="false"
+        android:padding="10dp" />
+
+    <TextView
+            android:id="@+id/learnMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="Learn More"
+            android:textSize="16sp"
+        android:textColor="@color/white"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/termsofuse"
+        android:layout_marginRight="10dp"
+        android:padding="10dp" />
+
+    <TextView
+            android:id="@+id/termsofuse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Terms of Use"
+            android:textSize="16sp"
+        android:textColor="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:padding="10dp"
+        android:layout_marginLeft="10dp" />
+
+    <Button
+                android:id="@+id/butSignIn"
+        android:layout_gravity="center"
+                android:text="LOG IN"
+                android:gravity="center"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/login_btn"
+                android:longClickable="false"
+                android:clickable="true"
+                android:adjustViewBounds="true"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:layout_below="@+id/inputLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dip"
+        android:textAlignment="center" />
+
+</RelativeLayout>
